--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 
 networks:
-  mongodb-replication-network:
+  mongodbnet:
     driver: bridge
     ipam:
       config:
@@ -21,8 +21,50 @@ services:
     ports:
       - 27017:27017
     networks:
-      mongodb-replication-network:
+      mongodbnet:
         ipv4_address: 172.1.1.2
   
   config-server-1:
     image: config-server-1/mongo:4.2.1
+    container_name: config-server-1
+    hostname: config-server-1
+    command: mongod --configsvr --replSet rs-config-server
+    networks:
+      mongodbnet:
+        ipv4_address: 172.1.1.3
+  
+  config-server-2:
+    image: config-server-1/mongo:4.2.1
+    container_name: config-server-2
+    hostname: config-server-2
+    command: mongod --configsvr --replSet rs-config-server
+    networks:
+      mongodbnet:
+        ipv4_address: 172.1.1.4
+
+  data-server-1:
+    image: data-server-1/mongo:4.2.1
+    container_name: data-server-1
+    hostname: data-server-1
+    command: mongod --shardsvr --replSet rs1
+    networks:
+      mongodbnet:
+        ipv4_address: 172.1.1.5
+
+  data-server-2:
+    image: data-server-2/mongo:4.2.1
+    container_name: data-server-2
+    hostname: data-server-2
+    command: mongod --shardsvr --replSet rs2
+    networks:
+      mongodbnet:
+        ipv4_address: 172.1.1.5
+
+  data-server-3:
+    image: data-server-3/mongo:4.2.1
+    container_name: data-server-3
+    hostname: data-server-3
+    command: mongod --shardsvr --replSet rs3
+    networks:
+      mongodbnet:
+        ipv4_address: 172.1.1.5
