--- a/conf/router.conf
+++ b/conf/router.conf
@@ -10,4 +10,4 @@ net:
   bindIp: 192.168.212.7
 
 sharding:
-  configDB: configReplSet/config-1:27019,config-2:27019
+  configDB: configReplSet/mongo-config-1:27019,mongo-config-2:27019
